--- a/aula8css.html
+++ b/aula8css.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./aula8css.css" rel="stylesheet">
-    <title>aula8css</title>
+    <title>aula8cssGIT</title>
 </head>
 <body>
     <h1>Ly Laços</h1>
